--- a/service/service_acl/pom.xml
+++ b/service/service_acl/pom.xml
@@ -12,4 +12,12 @@
     <artifactId>service_acl</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>spring_security</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
